--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="logo">Nazm C</div>
     <nav class="nav-menu">
       <a href="#">Consulting</a>
-      <a href="#">Learn</a>
+      <a href="#">Learn de</a>
       <a href="#">About</a>
       <a href="#">Contact</a>
     </nav>
